change web address

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script>
 			$(document).ready(function(){
 				$('span').linkIt({
-					href: 'http://www.w3schools.com',
+					href: 'http://www.google.com',
 					text: 'Click Me',
 					target: '_blank'
 				});
